--- a/templates/make-reservation.page.html
+++ b/templates/make-reservation.page.html
@@ -8,9 +8,19 @@
 
                 {{$res := index .Data "reservation"}}
 
-                <form method="post" action="" class="" novalidate>
+                Arrival : {{index .StringMap "start_date"}}<br/>
+
+                Departure : {{index .StringMap "end_date"}}<br/>
+
+                Room :{{$res.Room.RoomName}}<br/>
+            
+
+                <form method="post" action="/make-reservation" class="" novalidate>
                     <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
 
+                    <input type="hidden" name="start_date" value="{{index .StringMap "start_date"}}">
+                    <input type="hidden" name="end_date" value="{{index .StringMap "end_date"}}">
+                    <input type="hidden" name="room_id" value="{{$res.RoomID}}">
 
                     <div class="form-group mt-3">
                         <label for="first_name">First Name:</label>
@@ -32,7 +42,7 @@
                                name='last_name' value="{{$res.LastName}}" required>
                     </div>
 
-                    <div class="form-group">
+                    <!-- <div class="form-group">
                         <label for="start_date">Start date</label>
                         <input type="text" name="start_date" id="start_date" class="form_control">
                     </div>
@@ -40,7 +50,7 @@
                     <div class="form-group">
                         <label for="end_date">Start date</label>
                         <input type="text" name="end_date" id="end_date" class="form_control">
-                    </div>
+                    </div> -->
 
                     <input type="hidden" name="room_id" value="1">
 
