--- a/templates/login.page.html
+++ b/templates/login.page.html
@@ -2,7 +2,8 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <form>
+      <form method="post" action="/user/login" novalidate>
+        <input type="hidden" name="csrf_token" value="{{.CSRFToken}}" />
         <div class="form-group mt-3">
           <label for="email">email:</label>
           {{with .Form.Errors.Get "email"}}
